# Report-Building-Agent

./: .env.example  .gitignore  README.md  main.py  project_instructions.txt  pyproject.toml  requirements.txt
docs/: agent-best-practices.md  architecture.md  code-review.md
src/report_building_agent/: __init__.py  __main__.py  assistant.py  graph.py  prompts.py  retrieval.py  schemas.py  settings.py  tools.py
tests/: conftest.py  test_calculator_tool.py  test_retrieval.py  test_safe_eval.py  test_workflow_e2e.py
