[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "report-building-agent"
version = "0.1.0"
description = "Starter architecture for a LangGraph-based document assistant."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Fabio Lima" }
]
dependencies = [
  "langchain>=0.2.0",
  "langgraph>=0.6.7",
  "langchain-openai>=0.1.0",
  "langchain-core>=0.2.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.0",
  "openai>=1.0.0",
  "print-color>=0.4.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
